# ChangeLog for dev-libs/libksba
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libksba/ChangeLog,v 1.62 2007/01/12 11:32:51 opfer Exp $

  12 Jan 2007; Christian Faulhammer <opfer@gentoo.org>
  libksba-0.9.15.ebuild:
  stable x86, bug #161262

  11 Jan 2007; Markus Rothe <corsair@gentoo.org> libksba-0.9.15.ebuild:
  Stable on ppc64; bug #161262

  30 Oct 2006; Alon Bar-Lev <alonbl@gentoo.org> libksba-1.0.0.ebuild:
  Fix libgpg-error dependency, thanks to Matthias Bethke, closes bug#153429

*libksba-1.0.0 (29 Oct 2006)

  29 Oct 2006; Alon Bar-Lev <alonbl@gentoo.org> +libksba-1.0.0.ebuild:
  Version bump

  02 Oct 2006; Fabian Groffen <grobian@gentoo.org> libksba-0.9.14.ebuild,
  libksba-0.9.15.ebuild, libksba-0.9.16.ebuild:
  Dropped ppc-macos keyword, because OSX can't cope with the libtool provided
  by this package

  01 Oct 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  libksba-0.9.15.ebuild:
  hppa stable, bug #149652

  16 Sep 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  libksba-0.9.15.ebuild:
  ppc stable

  05 Sep 2006; Gustavo Zacarias <gustavoz@gentoo.org> libksba-0.9.15.ebuild:
  Stable on sparc

*libksba-0.9.16 (01 Aug 2006)

  01 Aug 2006; Daniel Black <dragonheart@gentoo.org>
  -files/libksba-0.9.8-m4.patch, -libksba-0.9.6.ebuild,
  -libksba-0.9.13.ebuild, +libksba-0.9.16.ebuild:
  version bump + cleanout

  22 Jul 2006; <psi29a@gentoo.org> libksba-0.9.13.ebuild,
  libksba-0.9.14.ebuild:
  stable on mips

  13 Jul 2006; Aron Griffis <agriffis@gentoo.org> libksba-0.9.15.ebuild:
  Mark 0.9.15 stable on ia64

  06 Jul 2006; Luis Medinas <metalgod@gentoo.org> libksba-0.9.15.ebuild:
  Stable on amd64 see bug #137622.

  30 Jun 2006; Thomas Cort <tcort@gentoo.org> libksba-0.9.15.ebuild:
  Stable on alpha wrt Bug #137622.

*libksba-0.9.15 (29 Jun 2006)

  29 Jun 2006; Robin H. Johnson <robbat2@gentoo.org> +libksba-0.9.15.ebuild: