@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libksba
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libksba/ChangeLog,v 1.62 2007/01/12 11:32:51 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libksba/ChangeLog,v 1.63 2007/01/25 20:28:07 eroyf Exp $
+
+  25 Jan 2007; Alexander H. Færøy <eroyf@gentoo.org> libksba-1.0.0.ebuild:
+  Stable on MIPS.
 
   12 Jan 2007; Christian Faulhammer <opfer@gentoo.org>
   libksba-0.9.15.ebuild:
